--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <a href="index.html" class="nav__logo"
           ><img src="./images/logo.png" alt="logo"
         /></a>
-        <ul class="nav__links">
-          <li><a href="#">Home</a></li>
+        <ul class="nav__links" id="linkall">
+          <li><a href="#" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#exhibitions">Exhibitions</a></li>
